    * 3885 FIX: Fixed sorting of version in werk list (1.2.8p10 and 1.2.8p11 were not listed on top)

    Notifications:
    * 3860 FIX: EC condition: Fixed default value of rule id selection

    Event Console:
    * 3884 FIX: Notifications: Fixed wrong LASTSERVICESTATE and SERVICESTATE in EC notifications...


1.2.8p11:
    Checks & Agents:
    * 3797 Check_MK Check helpers: Decreased memory consumption in distributed setups...
    * 3798 FIX: Clusters: Fixed invalid timestamp of last cached agent data...
    * 3848 FIX: megaraid_pdisks: Handle "rebuild" state as WARNING instead of UNKNOWN
    * 3849 FIX: check_cpu_peaks: Fixed broken active check
    * 3870 FIX: elphase.include: more robust against none type params
    * 3801 FIX: Fixed race condition with persisted data...
    * 3802 FIX: Fixed excess Check Helper PIPEs when a datasource program runs into a timeout...

    Multisite:
    * 3850 FIX: Fixed JS error when quicksearch snapin not in sidebar
    * 3871 FIX: stale services view: excluded services in downtime per default

    WATO:
    * 3855 SEC: Fixed possible command injection by privileged WATO users...


1.2.8p10:
    Core & Setup:
    * 3843 FIX: Fixed reporting of crashes when using Nagios core
    * 3846 FIX: Nagios: define_contactgroups = False is handled correctly again

    Checks & Agents:
    * 3743 SEC: mk_jolokia: Use JSON library to parse JSON output in lieu of eval()...
            NOTE: Please refer to the migration notes!
    * 3772 FIX: ipmi_sensors: fixed missing states
    * 3562 FIX: agent_vsphere.pysphere: fixed problems related to ssl certificate validation on older distributions/python versions
    * 3782 FIX: agent_netapp: fixed exception with values containing umlauts
    * 3774 FIX: apc_symmetra: fixed wrong status and values handling
    * 3761 FIX: windows_tasks: Fixed possible exception in discovery in case of unexpected agent data
    * 3762 FIX: local: Fixed long output handling with Microcore...