@@ -1,0 +1,12 @@
+Title: HW/SW Inventory: Fixed GUI display crash when querying data from older software versions
+Level: 1
+Component: inv
+Compatible: compat
+Version: 1.2.8p12
+Date: 1474450273
+Class: fix
+
+Older software (livestatus) versions did not provide sufficient inventory data.
+
+The crash happened when a site with a newer software version tried to query
+data from a site running an older version.
